<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="Autofill">

    <EditText
        android:id="@+id/order_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/mis_order_number"
        android:textColor="@color/black"
        android:textColorHint="@color/text_hint"
        android:textSize="14sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/text_hint"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/tips_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/tips"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/text_hint"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/payment_method"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/payment_method_radio"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/payment_method_pay_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_method_pay_by"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/payment_method_bom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_method_bot_im"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/payment_method_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_method_bank_card"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </RadioGroup>

    <include layout="@layout/include_print_receipt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ok" />

</androidx.appcompat.widget.LinearLayoutCompat>